--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="25dp"
             android:layout_marginTop="25dp"
+            android:visibility="gone"
             android:layout_marginBottom="25dp"
             app:cardCornerRadius="25dp"
             app:cardElevation="2dp"
