--- a/app/src/main/res/layout/fragment_workouts.xml
+++ b/app/src/main/res/layout/fragment_workouts.xml
@@ -23,6 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
+        android:visibility="gone"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
         app:cardCornerRadius="25dp"
